--- a/source/src/main/resources/application.yml
+++ b/source/src/main/resources/application.yml
@@ -22,7 +22,12 @@ spring:
         output:
           producer:
             requiredGroups: jdbc-event-processor
+            autoBindDlq: true
           destination: jdbc-event
+      rabbit:
+        bindings:
+          output:
+            binder: rabbit
 
 management:
   security:
