--- a/processor/src/main/resources/application.yml
+++ b/processor/src/main/resources/application.yml
@@ -19,10 +19,25 @@ spring:
     stream:
       bindings:
         input:
-          group: jdbc-event-processor
-          destination: jdbc-event
-        output:
+          consumer:
+            concurrency: 2
+          group: geode-sink
           destination: jdbc-event-result
+          binder: rabbit
+          consumer:
+            maxAttempts: 1
+      rabbit:
+        bindings:
+          input:
+            consumer:
+              autoBindDlq: true
+              republishToDlq: true
+              requeueRejected: false
+  datasource:
+    tomcat:
+      max-wait:  300
+      min-idle: 10
+      max-idle: 100
 
 management:
   security:
